[package]
name = "astor-scraper"
version = "0.1.0"
authors = ["Austen Ito <aito@digitalocean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
url = "2.1.1"
clap = "3.0.0-beta.2"